--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -119,7 +119,7 @@
                 </div>
                 <h2>Temperature Converter</h2>
                 <div class="btn-container">
-                    <button class="white" onclick="window.open('https://va-rohith.github.io/OIBSIP/Temperature-Converter/')">Visit The Page</button>
+                    <button class="white" onclick="window.open('https://github.com/kashish0931/OIBSIP/tree/main/Temperature_converter')">Visit The Page</button>
                 </div>
             </div>
             <div class="details-container">
@@ -138,7 +138,7 @@
                 </div>
                 <h2>Landing-Page</h2>
                 <div class="btn-container">
-                    <button class="white" onclick="window.open('https://va-rohith.github.io/OIBSIP/Landing-Page/')">Visit The Page</button>
+                    <button class="white" onclick="window.open('https://github.com/kashish0931/OIBSIP/tree/main/landing_page')">Visit The Page</button>
                 </div>
             </div>
         </div>
